--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <shade.name>shade.antishare</shade.name>
 
     <!-- Dependency Versions -->
-    <bukkit.version>1.6.4-R1.0</bukkit.version>
+    <bukkit.version>1.7.2-R0.1-SNAPSHOT</bukkit.version>
     <vault.version>1.2.27</vault.version>
     <materialapi.version>0.0.2-SNAPSHOT</materialapi.version>
     <metricsextension.version>0.0.5-SNAPSHOT</metricsextension.version>
