--- a/src/main/resources/locale.yml
+++ b/src/main/resources/locale.yml
@@ -115,6 +115,7 @@ splits-loaded: 'World Splits Loaded: {0}'
 updated-old-block: 'The original block was updated back to it''s original state'
 not-updated-old-block: 'The original block could not be found'
 check-location: 'Please check the location ''{0} ({1}, {2}, {3})'' for block corruption. The block to look for is a {4} {5} block.' 
+non-empty-inventory: '{RED}You must have an empty inventory before switching gamemodes!'
 tool-meta:
     generic-tool: 'Right click a player/block to see the Game Mode of that object'
     set-tool-1: 'Left click to SET the Game Mode of a block'
