--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
         <shade.name>shade.antishare</shade.name>
 
         <!-- Dependency Versions -->
-        <bukkit.version>1.7.2-R0.1-SNAPSHOT</bukkit.version>
+        <bukkit.version>1.7.2-R0.2</bukkit.version>
         <vault.version>1.2.27</vault.version>
         <materialapi.version>0.0.3-SNAPSHOT</materialapi.version>
         <metricsextension.version>0.0.5-SNAPSHOT</metricsextension.version>
@@ -34,6 +34,8 @@
         <!-- Test Versions -->
         <junit.version>4.11</junit.version>
         <powermock.version>1.5</powermock.version>
+
+        <BUILD_NUMBER>local</BUILD_NUMBER>
     </properties>
 
     <!-- DEPENDENCIES -->
