Base structure for much more work ahead

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,193 +1,1 @@
-# AntiShare Configuration
-#
-# Help Resources:
-#
-# WIKI -        https://github.com/turt2live/AntiShare/wiki
-# IRC -         http://webchat.esper.net/?nick=as...&channels=turt2live
-#               or on EsperNet (#turt2live)
-# BUKKITDEV -   http://dev.bukkit.org/server-mods/antishare/
-#
-# A fully commented configuration can be found within the plugin jar.
-lists:
-    # Block potions for creative players?
-    no-potions: true
-    no-thrown-potions: true
-    # Block break list. These items are DENIED
-    break:
-    - bedrock
-    # Block place list. These items are DENIED
-    place:
-    - diamond block
-    - gold block
-    - iron block
-    - bedrock
-    - tnt
-    - emerald block
-    - quartz block
-    - redstone block
-    # Items creative players cannot die with
-    death:
-    - all
-    # Items creative players cannot pickup
-    pickup:
-    - all
-    # Items creative players cannot drop
-    drop:
-    - all
-    # Items/blocks creative players cannot use (such as flint and steel)
-    use:
-    - tnt minecart
-    - sign
-    - flint and steel
-    - exp bottle
-    - monster egg
-    - lava bucket
-    - water bucket
-    - fireball
-    # Items/blocks creative players cannot right click (interact with)
-    interact:
-    - storage minecart
-    - powered minecart
-    - hopper minecart
-    - hopper
-    - chest
-    - trapped chest
-    - furnace
-    - dispenser
-    - dropper
-    - jukebox
-    - anvil
-    - enchantment table
-    - item frame
-    # Items creative players cannot eat (potions, food, etc)
-    eat:
-    - all
-    # Commands creative players cannot use. These do NOT start with /
-    commands:
-    - command1
-    - command2
-    # Mobs creative players cannot attack. 'players' means players
-    attack-mobs:
-    - all
-    # Mobs creative players cannot interact with
-    interact-mobs:
-    - all
-    # Items creative players cannot craft
-    crafting:
-    - all
-    # Mobs creative players cannot create. Currently supports: 'iron golem', 'snow golem', and 'wither'
-    craft-mob:
-    - iron golem
-    - snow golem
-    - wither
-# Block tracking
-tracking:
-    creative:
-    - all
-    survival:
-    - all
-    adventure:
-    - none
-# Settings for all of AntiShare
-settings:
-    # Treat adventure mode like creative mode?
-    adventure-is-creative: true
-    # Cleanup settings
-    cleanup:
-        inventories:
-            enabled: true
-            # Choices: 'archive' or 'delete'
-            method: archive
-            # Number of days to wait
-            after: 120
-            remove-old-worlds: true
-    # GameMode cooldown
-    cooldown:
-        enabled: false
-        wait-time-seconds: 5
-    # Natural protection settings
-    natural-protection:
-        # Should we allow cross-gamemode protection?
-        # Example: Creative player places a torch on a survival block (default: deny)
-        allow-mismatch-gamemode: false
-        remove-attached-blocks: true
-        # If true, when a creative player breaks an inventory-holding block, the inventory will be cleared
-        empty-inventories: true
-        # Set to true to enable use of "Game Mode Spreading" (such as a creative mushroom spreads making the newly grown mushroom creative as well)
-        # This also affects chest (and etc) interactions with hoppers. This means that if true, AntiShare will stop items from a Creative chest
-        # from spreading to a survival hopper (for example).
-        gamemode-spreading: true
-        # Options for death control
-        on-death:
-            # The number of seconds after a gamemode change before items will drop.
-            # For example, if this is "1" then if the player has changed gamemode
-            # within the last 1 second upon death then no items will be dropped.
-            # Set to 0 to disable.
-            # Note: This simply clears the inventory instead of dropping items,
-            # regardless of Game Mode on death.
-            # Negative numbers are ignored and treated as "zero"
-            no-drops-after: 0.5
-        break-as-gamemode:
-            pistons: true
-            # If this is true, then blocks will be broken according to their gamemode (if attached, such as a torch on a falling sand block)
-            attached-blocks: true
-            water: true
-            falling-blocks: true
-            blown-up: true
-    # Stuff to do on GameMode change
-    gamemode-change:
-        change-level: true
-        # Requires Vault!
-        change-economy-balance: true
-        change-inventory: true
-        change-ender-chest: true
-        change-potion-effects: true
-        # If true, game mode changes can only occur if the player has an empty inventory
-        require-empty-inventory: false
-    # Use per world inventories?
-    use-per-world-inventories: false
-    # Feature handling
-    features:
-        use-inventories: true
-        use-fines-rewards: false
-    # Alert settings
-    notify:
-        use: true
-        # Permission = AntiShare.getNotification
-        with-permission: true
-        console: false
-# Plugin hooks
-hooks:
-    magicspells:
-        block-creative: true
-    playervaults:
-        block-creative: true
-    logblock:
-        stop-spam: false
-# Advanced interaction settings, 'drop-items' only takes effect if 'deny' is false
-interaction:
-    survival-breaking-creative:
-        deny: true
-        drop-items: false
-    creative-breaking-survival:
-        deny: true
-        drop-items: false
-    survival-breaking-adventure:
-        deny: true
-        drop-items: false
-    creative-breaking-adventure:
-        deny: true
-        drop-items: false
-    adventure-breaking-survival:
-        deny: true
-        drop-items: false
-    adventure-breaking-creative:
-        deny: true
-        drop-items: false
-# Misc. Settings
-other:
-    ignore-updates: false
-    ignore-magic-value: false
-    allow-test-command: false
-    version_string: Not set
-    inv-cache-time: 60
+# AntiShare
