--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,281 +1,8 @@
 name: AntiShare
-main: com.turt2live.antishare.AntiShare
+main: com.turt2live.antishare.bukkit.AntiShare
 version: maven-version-number
 description: Create social awkwardness for creative-mode players
-authors: [Turt2Live, Sayshal]
+author: turt2live
 website: http://dev.bukkit.org/server-mods/antishare
-softdepend: [Vault, ChestShop, Lockette, LWC, LogBlock, MagicSpells, Pail, PermissionsEx, Towny, MultiVerse-Core]
+#softdepend: [Vault, ChestShop, Lockette, LWC, LogBlock, MagicSpells, Pail, PermissionsEx, Towny, MultiVerse-Core]
 build: jenkins-build-number
-commands:
-  antishare:
-    description: AntiShare command
-    aliases: [as, antis, ashare]
-    usage: |
-      -------- AntiShare Help Menu --------
-      /<command> rl = Reloads AntiShare
-      /<command> region <gamemode> <name> = Create a GameMode region
-      /<command> rmregion = Remove GameMode region at your location
-      /<command> rmregion <name> = Remove a GameMode region by name
-      /<command> editregion <name> <key> <value> = Edit a GameMode region
-      /<command> listregions = List all regions
-      /<command> listregions # = List regions found on page #
-      /<command> mirror <player> [ender/normal] [gamemode] [world] - Mirror <player>'s inventory
-      /<command> tool - Get the AntiShare tool (Blaze Rod)
-      /<command> settool - Get the set block AntiShare tool (Blaze Powder)
-      /<command> toolbox - Get the AntiShare toolbox (set tool, tool, and cuboid tool)
-      /<command> cuboid tool - Get the Cuboid tool (Slimeball)
-      /<command> cuboid clear - Clear current cuboid save
-      /<command> cuboid status - Show cuboid status
-      /<command> money <on/off> - Turns on/off fine/reward messages
-      /<command> money status - Tells you if you get fine/reward messages
-      /<command> simplenotice - Toggle SimpleNotice support
-      /<command> check [creative/survival/adventure/playername] - Find Game Mode users
-      /<command> version - Show AntiShare version information
-      /<command> help = This menu
-
-permissions:
-    AntiShare.*:
-        description: All AntiShare permissions
-        default: op
-        children:
-            AntiShare.allow.*: true
-            AntiShare.getDrops: true
-            AntiShare.mirror: true
-            AntiShare.getNotifications: true
-            AntiShare.silent: true
-            AntiShare.regions.*: true
-            AntiShare.tool.*: true
-            AntiShare.free_place: true
-            AntiShare.inventories.*: true
-            AntiShare.worldsplit.*: true
-            AntiShare.reload: true
-            AntiShare.affect.*: false
-            AntiShare.money.*: true
-            AntiShare.cooldownbypass: true
-            AntiShare.check: true
-            AntiShare.itemframes: true
-            AntiShare.cuboid: true
-            AntiShare.plugin.magicspells: true
-            AntiShare.gamemode.emptyinv: true
-    AntiShare.cuboid:
-        description: Allows the target to create cuboids in AntiShare
-        default: op
-    AntiShare.itemframes:
-        description: Allows the target to add/use items in Item Frames not of their Game Mode
-        default: op
-    AntiShare.check:
-        description: Allows the target to see who is in a defined Game Mode
-        default: op
-    AntiShare.reload:
-        description: Allows the target to reload AntiShare
-        default: op
-    AntiShare.getDrops:
-        description: Allows the target to get drops, regardless of configuration
-        default: op
-    AntiShare.mirror:
-        description: Allows the target to mirror people's inventories
-        default: op
-    AntiShare.getNotifications:
-        description: Allows the target to get notifications
-        default: op
-    AntiShare.silent:
-        description: No notifications are fired because of this player
-        default: op
-    AntiShare.free_place:
-        description: Allows the player to place blocks without the block ending up in the tracker. Can also break creative/survival/natural blocks regardless of restriction
-        default: op
-    AntiShare.cooldownbypass:
-        description: Allows the player to bypass the Game Mode Cooldown
-        default: op
-    AntiShare.gamemode.emptyinv:
-        description: Allows the player to bypass the empty inventory GameMode change check
-        default: op
-    AntiShare.tool.*:
-        description: Allow all AntiShare tool functions
-        default: op
-        children:
-            AntiShare.tool.get: true
-            AntiShare.tool.use: true
-    AntiShare.tool.get:
-        description: Allows the target to get the AntiShare tool
-        default: op
-    AntiShare.tool.use:
-        description: Allows the target to use the AntiShare tool
-        default: op
-    AntiShare.money.*:
-        description: Never fine or reward the player
-        default: op
-        children:
-            AntiShare.money.noreward: true
-            AntiShare.money.nofine: true
-    AntiShare.money.noreward:
-        description: Never reward the player
-        default: op
-    AntiShare.money.nofine:
-        description: Never fine the player
-        default: op
-    AntiShare.affect.*:
-        description: The target is affected by all Game Modes
-        default: false
-        children:
-            AntiShare.affect.creative: true
-            AntiShare.affect.survival: true
-            AntiShare.affect.adventure: true
-    AntiShare.affect.creative:
-        description: The target is affected when in Creative
-        default: true
-    AntiShare.affect.survival:
-        description: The target is affected when in Survival
-        default: false
-    AntiShare.affect.adventure:
-        description: The target is affected when in Adventure
-        default: false
-    AntiShare.inventories.*:
-        description: Allow all AntiShare inventory functions
-        default: op
-        children:
-            AntiShare.inventories.no_swap: true
-            AntiShare.inventories.allowcrafting: true
-    AntiShare.inventories.no_swap:
-        description: Allows the target to never swap inventories on Game Mode changes. Will also stop experience changes.
-        default: op
-    AntiShare.inventories.allowcrafting:
-        description: Allows the target to use crafting tables
-        default: op
-    AntiShare.regions.*:
-        description: Allow all AntiShare region functions
-        default: op
-        children:
-            AntiShare.regions.create: true
-            AntiShare.regions.delete: true
-            AntiShare.regions.edit: true
-            AntiShare.regions.roam: true
-            AntiShare.regions.eat: true
-            AntiShare.regions.throw_item: true
-            AntiShare.regions.pickup_item: true
-            AntiShare.regions.place: true
-            AntiShare.regions.break: true
-            AntiShare.regions.use_item: true
-            AntiShare.regions.interact_item: true
-            AntiShare.regions.list: true
-            AntiShare.regions.attack_mobs: true
-            AntiShare.regions.attack_players: true
-    AntiShare.regions.attack_mobs:
-        description: Allows the target to attack mobs in any region
-        default: op
-    AntiShare.regions.attack_players:
-        description: Allows the target to attack players in any region
-        default: op
-    AntiShare.regions.create:
-        description: Allows the target to create AntiShare regions
-        default: op
-    AntiShare.regions.delete:
-        description: Allows the target to delete AntiShare regions
-        default: op
-    AntiShare.regions.edit:
-        description: Allows the target to edit AntiShare regions
-        default: op
-    AntiShare.regions.roam:
-        description: Allows the target to roam through regions without inventory/Game Mode changes
-        default: op
-    AntiShare.regions.throw_item:
-        description: Allows the target to throw items into/from AntiShare regions
-        default: op
-    AntiShare.regions.pickup_item:
-        description: Allows the target to pickup items from AntiShare regions
-        default: op
-    AntiShare.regions.place:
-        description: Allows the target to place blocks between regions
-        default: op
-    AntiShare.regions.break:
-        description: Allows the target to break blocks between regions
-        default: op
-    AntiShare.regions.use_item:
-        description: Allows the target to use items between regions
-        default: op
-    AntiShare.regions.interact_item:
-        description: Allows the target to interact with items between regions
-        default: op
-    AntiShare.regions.list:
-        description: Allows the target to list and lookup regions
-        default: op
-    AntiShare.allow.*:
-        description: Allow all AntiShare.allow events
-        default: op
-        children:
-            AntiShare.allow.block_place: true
-            AntiShare.allow.block_break: true
-            AntiShare.allow.use_item: true
-            AntiShare.allow.interact_item: true
-            AntiShare.allow.commands: true
-            AntiShare.allow.pickup_item: true
-            AntiShare.allow.drop_item: true
-            AntiShare.allow.hit_players: true
-            AntiShare.allow.hit_mobs: true
-            AntiShare.allow.death: true
-            AntiShare.allow.create: true
-            AntiShare.allow.eat: true
-    AntiShare.allow.eat:
-        description: Allows food
-        default: op
-    AntiShare.allow.create:
-        description: Allows mob creation
-        default: op
-    AntiShare.allow.block_place:
-        description: Allows block place
-        default: op
-    AntiShare.allow.block_break:
-        description: Allows block break
-        default: op
-    AntiShare.allow.use_item:
-        description: Allows item use
-        default: op
-    AntiShare.allow.interact_item:
-        description: Allows item interaction
-        default: op
-    AntiShare.allow.commands:
-        description: Allows item use
-        default: op
-    AntiShare.allow.death:
-        description: Allows death with illegal items
-        default: op
-    AntiShare.allow.pickup_item:
-        description: Allows item pickup
-        default: op
-    AntiShare.allow.drop_item:
-        description: Allows item dropping
-        default: op
-    AntiShare.allow.hit_players:
-        description: Allows combat with players
-        default: op
-    AntiShare.allow.hit_mobs:
-        description: Allows combat with mobs (cows, creepers, etc)
-        default: op
-    AntiShare.plugin.*:
-        description: Allow all AntiShare plugin integration functions
-        default: op
-        children:
-            AntiShare.plugin.magicspells: true
-            AntiShare.plugin.playervaults: true
-    AntiShare.plugin.magicspells:
-        description: Allows the target to bypass MagicSpells integration
-        default: op
-    AntiShare.plugin.playervaults:
-        description: Allows the target to bypass PlayerVaults integration
-        default: op
-    AntiShare.worldsplit.*:
-        description: Allow full bypass for world splits
-        default: op
-        children:
-            AntiShare.worldsplit.creative: true
-            AntiShare.worldsplit.survival: true
-            AntiShare.worldsplit.adventure: true
-    AntiShare.worldsplit.creative:
-        description: Allow bypass of creative world split sides
-        default: op
-    AntiShare.worldsplit.survival:
-        description: Allow bypass of survival world split sides
-        default: op
-    AntiShare.worldsplit.adventure:
-        description: Allow bypass of adventure world split sides
-        default: op
