--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <shade.name>shade.antishare</shade.name>
 
+        <!-- TODO: Go through pom -->
+
         <!-- Dependency Versions -->
-        <bukkit.version>1.7.2-R0.2</bukkit.version>
+        <bukkit.version>1.7.2-R0.3-SNAPSHOT</bukkit.version>
         <vault.version>1.2.27</vault.version>
         <materialapi.version>0.0.3-SNAPSHOT</materialapi.version>
         <metricsextension.version>0.0.5-SNAPSHOT</metricsextension.version>
