--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,3 +5,11 @@ description: Create social awkwardness for creative-mode players
 author: turt2live
 website: http://dev.bukkit.org/server-mods/antishare
 build: jenkins-build-number
+commands:
+    antishare:
+        aliases: [as, ashare, antis, turt2live]
+        description: AntiShare core command. See /antishare help for more information
+permissions:
+    antishare.tools:
+        default: op
+        description: Allows the use of the AntiShare tools
