--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 
         <!-- Dependency Versions -->
         <bukkit.version>1.7.2-R0.3</bukkit.version>
+        <vault.version>1.2.31</vault.version>
 
         <!-- Test Versions -->
         <junit.version>4.11</junit.version>
@@ -44,6 +45,13 @@
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
             <version>${bukkit.version}</version>
+        </dependency>
+
+        <!-- Vault -->
+        <dependency>
+            <groupId>net.milkbowl.vault</groupId>
+            <artifactId>Vault</artifactId>
+            <version>${vault.version}</version>
         </dependency>
 
         <!-- JUnit -->
@@ -71,6 +79,12 @@
         <repository>
             <id>bukkit-repo</id>
             <url>http://repo.bukkit.org/content/groups/public</url>
+        </repository>
+
+        <!-- For Vault -->
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
         </repository>
 
         <!-- For my own stuff -->
