--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
             <version>1.2.31</version>
         </dependency>
 
+        <!-- Hurtle -->
+        <dependency>
+            <groupId>com.turt2live</groupId>
+            <artifactId>Hurtle</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
@@ -116,15 +123,32 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <minimizeJar>true</minimizeJar>
                             <artifactSet>
                                 <includes>
-                                    <include>com.feildmaster.lib:EnhancedConfiguration</include>
+                                    <include>com.turt2live:Hurtle</include>
                                 </includes>
                             </artifactSet>
                             <relocations>
                                 <relocation>
-                                    <pattern>com.feildmaster.lib.configuration</pattern>
-                                    <shadedPattern>com.feildmaster.lib.configuration.${project.name}</shadedPattern>
+                                    <pattern>com.turt2live.hurtle</pattern>
+                                    <shadedPattern>com.turt2live.${project.name}.hurtle</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.turt2live.t2limages</pattern>
+                                    <shadedPattern>com.turt2live.t2limages.${project.name}</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>org.jnbt.t2limages</pattern>
+                                    <shadedPattern>org.jnbt.t2limages.${project.name}</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.mojang.api</pattern>
+                                    <shadedPattern>com.mojang.api.${project.name}</shadedPattern>
+                                </relocation>
+                                <relocation>
+                                    <pattern>com.ikeirnez.pluginmessageapiplus</pattern>
+                                    <shadedPattern>com.ikeirnez.pluginmessageapiplus.${project.name}</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
