--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.5</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Resources Plugin -->
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
