--- a/pom.xml
+++ b/pom.xml
@@ -1,242 +1,25 @@
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.turt2live.antishare</groupId>
+    <groupId>com.turt2live</groupId>
     <artifactId>AntiShare</artifactId>
-    <name>AntiShare</name>
-    <version>5.5.3-SNAPSHOT</version>
+    <packaging>pom</packaging>
+    <version>parent</version>
 
-    <developers>
-        <developer>
-            <name>Travis Ralston</name>
-            <email>turt2live@turt2live.com</email>
-        </developer>
-    </developers>
-
-    <ciManagement>
-        <system>Jenkins</system>
-        <url>http://ci.turt2live.com</url>
-    </ciManagement>
-
-    <description>A Bukkit plugin for creative player management</description>
-    <inceptionYear>2012</inceptionYear>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <!-- Used by replacement plugin to inject build number -->
-        <BUILD_NUMBER>local</BUILD_NUMBER>
-    </properties>
-
-    <!-- DEPENDENCIES -->
-
-    <dependencies>
-
-        <!-- Bukkit -->
-        <dependency>
-            <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.4.7-R1.0</version>
-        </dependency>
-
-        <!-- Vault -->
-        <dependency>
-            <groupId>net.milkbowl.vault</groupId>
-            <artifactId>Vault</artifactId>
-            <version>1.2.31</version>
-        </dependency>
-
-        <!-- Hurtle -->
-        <dependency>
-            <groupId>com.turt2live</groupId>
-            <artifactId>Hurtle</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
-        </dependency>
-
-        <!-- JSON library -->
-        <dependency>
-            <groupId>net.minidev</groupId>
-            <artifactId>json-smart</artifactId>
-            <version>1.2</version>
-        </dependency>
-
-        <!-- JUnit -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Mockito -->
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.9.5</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!-- Resources Plugin -->
-        <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-resources-plugin</artifactId>
-            <version>2.4.3</version>
-        </dependency>
-
-    </dependencies>
-
-    <!-- REPOSITORIES -->
+    <modules>
+        <module>AntiShare-API</module>
+        <module>AntiShare-Bukkit</module>
+    </modules>
 
     <repositories>
-
-        <!-- For Bukkit -->
-        <repository>
-            <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/content/groups/public</url>
-        </repository>
-
-        <!-- For Vault -->
-        <repository>
-            <id>vault-repo</id>
-            <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
-        </repository>
-
-        <!-- For my own stuff -->
         <repository>
             <id>turt2live-repo</id>
             <url>http://repo.turt2live.com</url>
         </repository>
-
     </repositories>
-
-    <!-- BUILD -->
-
-    <build>
-        <defaultGoal>clean package</defaultGoal>
-        <finalName>${project.name}</finalName>
-        <!-- Distribution Management -->
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ftp</artifactId>
-                <version>1.0-alpha-6</version>
-            </extension>
-        </extensions>
-
-        <!-- BUILD PLUGINS -->
-
-        <plugins>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <minimizeJar>true</minimizeJar>
-                            <artifactSet>
-                                <includes>
-                                    <include>com.turt2live:Hurtle</include>
-                                    <include>net.minidev:json-smart</include>
-                                </includes>
-                            </artifactSet>
-                            <relocations>
-                                <relocation>
-                                    <pattern>com.turt2live.hurtle</pattern>
-                                    <shadedPattern>com.turt2live.${project.name}.hurtle</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>net.minidev</pattern>
-                                    <shadedPattern>net.minidev.${project.name}</shadedPattern>
-                                </relocation>
-                            </relocations>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.1</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.11</version>
-                <configuration>
-                    <forkMode>never</forkMode>
-                    <threadCount>1</threadCount>
-                    <perCoreThreadCount>false</perCoreThreadCount>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit47</artifactId>
-                        <version>2.11</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-
-            <plugin>
-                <groupId>com.google.code.maven-replacer-plugin</groupId>
-                <artifactId>maven-replacer-plugin</artifactId>
-                <version>1.3.8</version>
-                <executions>
-                    <execution>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>replace</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <file>target/classes/plugin.yml</file>
-                    <replacements>
-                        <replacement>
-                            <token>maven-version-number</token>
-                            <value>${project.version}</value>
-                        </replacement>
-                        <replacement>
-                            <token>jenkins-build-number</token>
-                            <value>${BUILD_NUMBER}</value>
-                        </replacement>
-                    </replacements>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.9</version>
-                <executions>
-                    <execution>
-                        <id>antishare-javadocs</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
-        </plugins>
-    </build>
-
-    <!-- DISTRIBUTION MANAGEMENT -->
 
     <distributionManagement>
         <repository>
@@ -244,4 +27,6 @@
             <url>ftp://ftp.turt2live.com/public_html/maven2</url>
         </repository>
     </distributionManagement>
+
+
 </project>
