Maybe this will compile on jenkins?

--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,14 @@
         </repository>
     </distributionManagement>
 
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ftp</artifactId>
+                <version>1.0-alpha-6</version>
+            </extension>
+        </extensions>
+    </build>
 
 </project>
