--- a/.gitignore
+++ b/.gitignore
@@ -17,24 +17,24 @@
 *.ipr
 *.iws
 .idea/
-/*/.classpath
-/*/.project
-/*/.settings
-/*/nbproject
-/*/target
-/*/.*.sw[a-p]
-/*/build
-/*/bin
-/*/dist
-/*/manifest.mf
-/*/.DS_Store
-/*/*.iml
-/*/*.ipr
-/*/*.iws
-/*/.idea/
+/**/.classpath
+/**/.project
+/**/.settings
+/**/nbproject
+/**/target
+/**/.*.sw[a-p]
+/**/build
+/**/bin
+/**/dist
+/**/manifest.mf
+/**/.DS_Store
+/**/*.iml
+/**/*.ipr
+/**/*.iws
+/**/.idea/
 /doc
-/*/doc
+/**/doc
 /javadoc.xml
-/*/javadoc.xml
+/**/javadoc.xml
 /test_data
 /test_data_2
