--- a/Bukkit/AntiShare/pom.xml
+++ b/Bukkit/AntiShare/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>1.4.7-R1.0</version>
+            <version>LATEST</version>
         </dependency>
 
         <!-- Vault -->
@@ -104,7 +104,7 @@
                             <relocations>
                                 <relocation>
                                     <pattern>com.turt2live.hurtle</pattern>
-                                    <shadedPattern>com.turt2live.${project.name}.hurtle</shadedPattern>
+                                    <shadedPattern>com.turt2live.antishare.hurtle</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
