--- a/Bukkit/AntiShare/pom.xml
+++ b/Bukkit/AntiShare/pom.xml
@@ -60,8 +60,68 @@
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
-            <artifactId>AntiShare-Bukkit-vPre</artifactId>
+            <artifactId>AntiShare-Bukkit-Abstraction</artifactId>
             <version>Bukkit-vPre</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_4_5</artifactId>
+            <version>Bukkit-v1_4_5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_4_6</artifactId>
+            <version>Bukkit-v1_4_6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_4_R1</artifactId>
+            <version>Bukkit-v1_4_R1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_5_R1</artifactId>
+            <version>Bukkit-v1_5_R1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_5_R2</artifactId>
+            <version>Bukkit-v1_5_R2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_5_R3</artifactId>
+            <version>Bukkit-v1_5_R3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_6_R1</artifactId>
+            <version>Bukkit-v1_6_R1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_6_R2</artifactId>
+            <version>Bukkit-v1_6_R2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_6_R3</artifactId>
+            <version>Bukkit-v1_6_R3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_7_R1</artifactId>
+            <version>Bukkit-v1_7_R1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_7_R2</artifactId>
+            <version>Bukkit-v1_7_R2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.turt2live.antishare</groupId>
+            <artifactId>AntiShare-Bukkit-v1_7_R3</artifactId>
+            <version>Bukkit-v1_7_R3</version>
         </dependency>
 
         <!-- == END ANTISHARE ABSTRACTION == -->
