--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,18 @@
         <module>Bukkit/AntiShare</module>
         <module>Bukkit/Abstraction</module>
         <module>Bukkit/Abstraction-vPre</module>
+        <module>Bukkit/Abstraction-v1_4_5</module>
+        <module>Bukkit/Abstraction-v1_4_6</module>
+        <module>Bukkit/Abstraction-v1_4_R1</module>
+        <module>Bukkit/Abstraction-v1_5_R1</module>
+        <module>Bukkit/Abstraction-v1_5_R2</module>
+        <module>Bukkit/Abstraction-v1_5_R3</module>
+        <module>Bukkit/Abstraction-v1_6_R1</module>
+        <module>Bukkit/Abstraction-v1_6_R2</module>
+        <module>Bukkit/Abstraction-v1_6_R3</module>
+        <module>Bukkit/Abstraction-v1_7_R1</module>
+        <module>Bukkit/Abstraction-v1_7_R2</module>
+        <module>Bukkit/Abstraction-v1_7_R3</module>
     </modules>
 
     <repositories>
