Magic fix all commit... not

--- a/Bukkit/AntiShare/pom.xml
+++ b/Bukkit/AntiShare/pom.xml
@@ -57,71 +57,85 @@
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-Abstraction</artifactId>
             <version>Bukkit-Abstraction</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-Abstraction</artifactId>
             <version>Bukkit-vPre</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_4_5</artifactId>
             <version>Bukkit-v1_4_5</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_4_6</artifactId>
             <version>Bukkit-v1_4_6</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_4_R1</artifactId>
             <version>Bukkit-v1_4_R1</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_5_R1</artifactId>
             <version>Bukkit-v1_5_R1</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_5_R2</artifactId>
             <version>Bukkit-v1_5_R2</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_5_R3</artifactId>
             <version>Bukkit-v1_5_R3</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_6_R1</artifactId>
             <version>Bukkit-v1_6_R1</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_6_R2</artifactId>
             <version>Bukkit-v1_6_R2</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_6_R3</artifactId>
             <version>Bukkit-v1_6_R3</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_7_R1</artifactId>
             <version>Bukkit-v1_7_R1</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_7_R2</artifactId>
             <version>Bukkit-v1_7_R2</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>com.turt2live.antishare</groupId>
             <artifactId>AntiShare-Bukkit-v1_7_R3</artifactId>
             <version>Bukkit-v1_7_R3</version>
+            <type>jar</type>
         </dependency>
 
         <!-- == END ANTISHARE ABSTRACTION == -->
@@ -135,6 +149,10 @@
         <repository>
             <id>vault-repo</id>
             <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+        </repository>
+        <repository>
+            <id>turt2live-repo</id>
+            <url>http://repo.turt2live.com</url>
         </repository>
     </repositories>
 
