--- a/Bukkit/AntiShare/pom.xml
+++ b/Bukkit/AntiShare/pom.xml
@@ -34,7 +34,7 @@
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>bukkit</artifactId>
-            <version>LATEST</version>
+            <version>1.4.5-R1.0</version>
         </dependency>
 
         <!-- Vault -->
