--- a/Bukkit/AntiShare/src/main/resources/lang.yml
+++ b/Bukkit/AntiShare/src/main/resources/lang.yml
@@ -8,7 +8,7 @@
 # Variables:
 # -------------------------------------------------------
 #  @p          - Applicable player, if any
-#  @v          - Generic variable, if any
+#  @v          - Generic variable, if any. May come with a number (eg: @v1)
 #  @g          - Applicable Game Mode, if any
 #  @u          - Applicable UUID, if any
 # -------------------------------------------------------
@@ -47,3 +47,9 @@ errors:
     permission: '&cYou do not have permission to do that.'
     syntax: '&cInvalid syntax. Try &e@v'
     help-suggest: '&cDid you mean &e/as help&c?'
+help:
+    title: '&2=====[ &aAntiShare Help &2]====='
+    line: '&b@v1 &8- &7@v2'
+    command:
+        help: 'AntiShare Help Command'
+        tools: 'AntiShare Administration Tools'
